# ITS-OTM_public_attestation

./: .gitignore  Cargo.toml  Dockerfile  ITS-OTM_FORMAL_VERIFICATION.md  ITS-OTM_SECURITY_LAYERS.md  ITS-OTM_public_attestation_HEADS_UP.md  ITS-OTM_public_attestation_manual.md  ITS-OTM_public_attestation_mathematics.md  ITS-OTM_public_attestation_troubleshooting.md  ITS-OTM_public_attestation_usecase.md  ITS-OTM_public_attestation_vision.md  PROOF_MANIFEST.md  README.md  shell.nix
completions/: its_otm.bash  its_otm.fish  its_otm.ps1  its_otm.zsh
man/: its_otm.1
mathematics/: Otm.lean  lake-manifest.json  lakefile.lean
mathematics/.lake/: lakefile.olean  lakefile.olean.trace
mathematics/Otm/: OtmIntegrity.lean
scripts/: pipeline_demo.sh
src/: lib.rs  otm.rs  poly.rs  public_attestation.rs  trapdoor.rs
tests/: cli_integration.rs  public_attestation_m31.rs
